fix du vertical align sur les mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,7 @@ body {
   display:flex;
   justify-content:center;
   align-items:center;
-  width:100%;
-  height:100%;
+  min-height: 100vh;
 }
 
 @media (min-width: 992px) {
